# openapi-nexus

./: .gitignore  Cargo.toml  Makefile  petstore-openapi.json  rustfmt.toml  simple-api.yaml  test-spec.yaml
openapi-generator-core/: Cargo.toml
openapi-generator-core/src/: error.rs  generator.rs  generator_registry.rs  lib.rs  openapi_code_generator.rs
openapi-generator-core/src/traits/: code_generator.rs  mod.rs
openapi-generator-ir/: Cargo.toml
openapi-generator-ir/src/: analysis.rs  error.rs  lib.rs  traversal.rs  utils.rs
openapi-generator-parser/: Cargo.toml
openapi-generator-parser/src/: error.rs  lib.rs  parser.rs
openapi-generator-parser/tests/: integration_tests.rs  parser_tests.rs
openapi-generator-petstore-example/: Cargo.toml
openapi-generator-petstore-example/src/: handlers.rs  lib.rs  main.rs  models.rs  openapi.rs
openapi-generator-transforms/: Cargo.toml
openapi-generator-transforms/src/: lib.rs  passes.rs  pipeline.rs
openapi-generator-transforms/src/passes/: circular_reference_detection.rs  dependency_analysis.rs  naming_convention.rs  path_normalization.rs  reference_resolution.rs  schema_normalization.rs  type_inference.rs
openapi-generator-typescript/: Cargo.toml
openapi-generator-typescript/snippets/: enum.j2  type_alias.j2
openapi-generator-typescript/src/: api_client.rs  ast.rs  config.rs  core.rs  emission.rs  emitter.rs  enhanced_generator.rs  generation.rs  generator.rs  imports.rs  lib.rs  mapping.rs  templates.rs  type_mapping.rs
openapi-generator-typescript/src/ast/: class.rs  code_block.rs  doc_comment.rs  enum_def.rs  enum_variant.rs  export.rs  export_specifier.rs  extends_clause.rs  function.rs  function_signature.rs  generated_file_header.rs  generic.rs  generic_list.rs  implements_clause.rs  import.rs  import_collection.rs  import_resolver.rs  import_specifier.rs  interface.rs  method.rs  node.rs  parameter.rs  parameter_list.rs  primitive_type.rs  property.rs  type_alias.rs  type_expression.rs
openapi-generator-typescript/src/config/: emission_config.rs  generator_config.rs  package_config.rs
openapi-generator-typescript/src/emission/: body_emitter.rs  class_emitter.rs  constants.rs  dependency_analyzer.rs  emitter.rs  enum_emitter.rs  file_category.rs  file_generator.rs  function_emitter.rs  import_emitter.rs  import_manager.rs  interface_emitter.rs  method_emitter.rs  pretty_utils.rs  type_alias_emitter.rs  type_expression_emitter.rs
openapi-generator-typescript/src/generation/: api_client.rs  schema.rs  template_generator.rs
openapi-generator-typescript/src/generator/: api_class_generator.rs  api_client.rs  api_client_generator.rs  import_generator.rs  package_files.rs  package_files_generator.rs  parameter_extractor.rs  runtime.rs  runtime_component_builder.rs  runtime_generator.rs  schema.rs  schema_context.rs  schema_generator.rs  template_generator.rs  typescript_generator.rs
openapi-generator-typescript/src/generator/tests/: api_class_generator_tests.rs  parameter_extractor_tests.rs  template_generator_tests.rs
openapi-generator-typescript/src/utils/: typescript_types.rs
openapi-generator-typescript/templates/: README.md.j2  class.j2  function.j2  interface.j2  runtime.ts.j2
openapi-generator-typescript/templates/method_bodies/: api_method.j2  api_method_delete.j2  api_method_get.j2  api_method_post_put.j2  base_api_request.j2  constructor.j2  constructor_enhanced.j2  constructor_required_error.j2  constructor_with_extends.j2  http_method.j2
openapi-generator-typescript/templates/runtime/: base_api.ts
openapi-generator-typescript/tests/: golden_tests.rs  integration_tests.rs
openapi-nexus-core/: Cargo.toml
openapi-nexus-core/src/: error.rs  generator.rs  openapi_code_generator.rs
openapi-nexus-core/src/traits/: emission.rs  file_writer.rs  mod.rs
openapi-nexus-parser/: Cargo.toml
openapi-nexus-parser/src/: error.rs  parser.rs
openapi-nexus-parser/tests/: integration_tests.rs  parser_tests.rs
openapi-nexus-transforms/: Cargo.toml
openapi-nexus-transforms/src/: ir_context.rs  lib.rs  passes.rs  pipeline.rs
openapi-nexus-transforms/src/passes/: dependency_analysis.rs  reference_resolution.rs  type_inference.rs  validation.rs
openapi-nexus-typescript/: Cargo.toml
openapi-nexus-typescript/src/: ast.rs  ast_trait.rs  config.rs  emission.rs  generator.rs  lib.rs  templating.rs  ts_lang_generator.rs  utils.rs
openapi-nexus-typescript/src/ast/: class.rs  class_definition.rs  code_block.rs  comment.rs  common.rs  export.rs  extends_clause.rs  file.rs  function_signature.rs  implements_clause.rs  import.rs  import_resolver.rs  metadata.rs  method.rs  node.rs  parameter_list.rs  primitive_type.rs  return_type.rs  statement.rs  ts_expression.rs  ty.rs  type_alias.rs  type_definition.rs  type_expression.rs  visibility.rs
openapi-nexus-typescript/src/ast_trait/: emission_context.rs  to_rcdoc.rs  to_rcdoc_with_context.rs
openapi-nexus-typescript/src/config/: file_config.rs
openapi-nexus-typescript/src/emission/: dependency_analyzer.rs  emitter.rs  error.rs  file_category.rs  ts_dependency_analyzer.rs  ts_file_category.rs  ts_language_emitter.rs  ts_type_emitter.rs
openapi-nexus-typescript/src/generator/: api_class_generator.rs  file_generator.rs  package_files_generator.rs  parameter_extractor.rs  runtime_generator.rs  schema_context.rs  schema_generator.rs  template_generator.rs  templates.rs  typescript_generator.rs
openapi-nexus-typescript/src/templating/: data.rs  filters.rs  functions.rs  templating.rs  templating_emitter.rs
openapi-nexus-typescript/src/utils/: schema_mapper.rs  typescript_types.rs
openapi-nexus-typescript/templates/: file_header.j2
openapi-nexus-typescript/templates/api/: api_class.j2
openapi-nexus-typescript/templates/method_bodies/: api_method_delete.j2  base_api_request.j2  constructor_base_api.j2  constructor_default.j2
openapi-nexus-typescript/templates/models/: model_helpers.j2
openapi-nexus-typescript/templates/runtime/: runtime.j2  utils.ts
openapi-nexus-typescript/tests/: golden_tests.rs
petstore-api/: Cargo.toml
(+233 files in other folders)
