[workspace]
resolver = "3"
members = [
    "openapi-generator",
    "openapi-generator-common",
    "openapi-generator-core",
    "openapi-generator-parser",
    "openapi-generator-ir",
    "openapi-generator-transforms",
    "openapi-generator-typescript",
    "openapi-generator-rust",
    "openapi-generator-plugin",
    "openapi-generator-petstore-example",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive", "env"] }
heck = "0.5.0"
http = "1.3.1"
indexmap = "2.12.0"
minijinja = { version = "2.12.0", features = ["loader"] }
pretty = "0.12.5"
rust-embed = { version = "8.8.0", features = ["include-exclude"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_norway = "0.9.42"
serde_plain = "1.0.2"
serde_repr = "0.1.20"
similar = "2.7.0"
snafu = "0.8.9"
tempfile = "3.23.0"
time = "0.3.44"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.7"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "config", "non_strict_integers", "openapi_extensions", "time", "ulid", "url", "uuid", "yaml"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "cache", "vendored"] }
uuid = { version = "1.18.1", features = ["v4", "v7", "serde"] }

# Workspace Projects
openapi-generator = { path = "openapi-generator" }
openapi-generator-common = { path = "openapi-generator-common" }
openapi-generator-core = { path = "openapi-generator-core" }
openapi-generator-ir = { path = "openapi-generator-ir" }
openapi-generator-parser = { path = "openapi-generator-parser" }
openapi-generator-plugin = { path = "openapi-generator-plugin" }
openapi-generator-rust = { path = "openapi-generator-rust" }
openapi-generator-transforms = { path = "openapi-generator-transforms" }
openapi-generator-typescript = { path = "openapi-generator-typescript" }
openapi-generator-petstore-example = { path = "openapi-generator-petstore-example" }