[package]
name = "openapi-generator-core"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
snafu.workspace = true
tracing.workspace = true

openapi-generator-ir.workspace = true
openapi-generator-parser.workspace = true
openapi-generator-plugin.workspace = true
openapi-generator-transforms.workspace = true
openapi-generator-typescript.workspace = true
openapi-generator-rust.workspace = true
