[package]
name = "openapi-generator-parser"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
openapi-generator-common.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
snafu.workspace = true
utoipa.workspace = true

[dev-dependencies]
tempfile.workspace = true
