[package]
name = "openapi-generator-petstore-example"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "petstore-server"
path = "src/bin/petstore-server.rs"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate-openapi.rs"

[dependencies]
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
