[package]
name = "openapi-generator-petstore-example"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "openapi-generator-petstore-example-server"
path = "src/bin/openapi-generator-petstore-example-server.rs"

[[bin]]
name = "openapi-generator-petstore-example-spec-generator"
path = "src/bin/openapi-generator-petstore-example-spec-generator.rs"

[dependencies]
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
utoipa-swagger-ui.workspace = true
utoipa.workspace = true
uuid.workspace = true
