[package]
name = "openapi-generator-transforms"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
openapi-generator-common.workspace = true
heck.workspace = true
indexmap.workspace = true
snafu.workspace = true
tracing.workspace = true
utoipa.workspace = true

openapi-generator-ir.workspace = true
