[package]
name = "openapi-generator-typescript"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
heck.workspace = true
indexmap.workspace = true
minijinja.workspace = true
pretty.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tracing.workspace = true
utoipa.workspace = true

openapi-generator-ir.workspace = true
openapi-generator-plugin.workspace = true

[dev-dependencies]
serde_norway.workspace = true
similar.workspace = true
tempfile.workspace = true
