[package]
name = "openapi-nexus-core"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
openapi-nexus-common.workspace = true
snafu.workspace = true
tracing.workspace = true

openapi-nexus-ir.workspace = true
openapi-nexus-parser.workspace = true
openapi-nexus-plugin.workspace = true
openapi-nexus-transforms.workspace = true
openapi-nexus-rust.workspace = true
utoipa.workspace = true
