[package]
name = "openapi-nexus-transforms"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
openapi-nexus-common.workspace = true
heck.workspace = true
indexmap.workspace = true
snafu.workspace = true
tracing.workspace = true
utoipa.workspace = true

openapi-nexus-ir.workspace = true
