[package]
name = "openapi-nexus-typescript"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
chrono.workspace = true
heck.workspace = true
http.workspace = true
indexmap.workspace = true
minijinja.workspace = true
pretty.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tracing.workspace = true
utoipa.workspace = true

openapi-nexus-core.workspace = true
openapi-nexus-ir.workspace = true
openapi-nexus-plugin.workspace = true

[dev-dependencies]
serde_norway.workspace = true
similar.workspace = true
tempfile.workspace = true
